--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="scripts/parallax.js">
     </script>
-    <script src="scripts/main.js" type="module" defer>
+    <script src="scripts/lib/main.js" type="module" defer>
     </script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
