done for the day

--- a/index.html
+++ b/index.html
@@ -26,53 +26,114 @@
 </head>
 
 <body>
+
+    <div id="testing" class="testing">
+        <div id="test-block" class="test-block"></div>
+        <div id="test-text"></div>
+    </div>
+
+
     <header class="navbar">
         <div id="left">
             <div class="header-node">Home</div>
             <div class="header-node">About</div>
         </div>
         <div id="right">
-            <div class="header-node">Show Your Support!</div>
             <div class="header-node" id="lightDarkToggleButton">Light/Dark Toggle</div>
+            <div class="header-node">Show Your Support!</div>
         </div>
     </header>
 
-    <div id="test-block" class="test-block"></div>
-
-    <!--<div class="seperator"></div>-->
 
     <br>
 
     <h1 class="page-title">Application Security in The Modern Age</h1>
 
-    <div id="scroll-bounds" class="scroll-bounds">
-        <div id="content-container" class="content-container">
-            <div id="text-content" class="text-content">
-                <h1>How Can this Benifit My Customer?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad
-                    facere iusto doloribus rem corrupti perferendis sit illo ipsam magnam, nesciunt tenetur et qui amet
-                    fugit. In error commodi cum fugit.</p>
+    <div class="content">
+        <div class="head-content">
+            <div class="left">
+                <h1>Add Text Here</h1>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates rem odit omnis
+                    accusamus ab
+                    quos error fugit, consectetur officia, eaque libero perferendis facere recusandae? Architecto at
+                    minima
+                    facere consectetur!
+                </p>
             </div>
-            <img id="content-image"
-                src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="">
+            <div class="right">
+                <img class="head-content-img"
+                    src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="">
+            </div>
+
         </div>
     </div>
 
+    <div class="seperator"></div>
 
-    <h1 class="page-title under-scroll">Reimagine Internet Saftey</h1>
-    <div id="scroll-into-image-container" class="image-parallax-container">
-        <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt=""
-            id="parallax-img">
+    <div class="content">
+        <div id="scroll-bounds" class="scroll-bounds">
+            <!--<h1>List of Exploited Vunerabalites</h1>-->
+            <div id="content-container" class="content-container">
+                <div id="text-content" class="text-content">
+
+                    <div class="talking-point">
+                        <h1>Log4j</h1>
+                        <p>The Log4j vurnabilty that was found in the Apachie Logging Framework that was used by servers
+                            to keep track of internet trafic across billions of devices.</p>
+                    </div>
+
+                    <div class="talking-point">
+                        <h1>Log4Shell</h1>
+                        <p>The Log4j vurnabilty that was found in the Apachie Logging Framework that was used by servers
+                            to keep track of internet trafic across billions of devices.</p>
+                    </div>
+                </div>
+
+                <div id="img-container" class="img-container">
+                    <img id="content-image" src="https://fossa.com/blog/content/images/size/w800h400/2021/12/log4j.png"
+                        alt="">
+                </div>
+            </div>
+        </div>
+
+
+        <div class="seperator"></div>
+
+        <h1 class="page-title under-scroll">Reimagine Internet Saftey</h1>
+        <div id="scroll-into-image-container" class="image-parallax-container">
+            <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt=""
+                id="parallax-img">
+        </div>
+
+        <div class="overlay-text">
+
+            <div class="more-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere deleniti eos quibusdam
+                recusandae
+                quod
+                minima sed perferendis in, saepe laboriosam officiis? Porro animi maxime accusantium harum doloribus
+                soluta
+                consectetur.
+            </div>
+
+            <div class="even-more-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere deleniti eos quibusdam
+                recusandae
+                quod
+                minima sed perferendis in, saepe laboriosam officiis? Porro animi maxime accusantium harum doloribus
+                soluta
+                consectetur.
+            </div>
+
+            <h1 class="even-more-text-head">Something Insighful Here.</h1>
+        </div>
+        <div id="parallax-range"></div>
+
+        <!--<div class="under-parallax">-->
+        <!--    <img src="https://developers.elementor.com/docs/assets/img/elementor-placeholder-image.png" alt="">-->
+        <!--</div>-->
     </div>
-
-    <div class="more-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias facere deleniti eos quibusdam recusandae quod
-        minima sed perferendis in, saepe laboriosam officiis? Porro animi maxime accusantium harum doloribus soluta
-        consectetur.
-    </div>
-
-
-    <div class="large"></div>
 
 </body>
 
