website for video

--- a/index.html
+++ b/index.html
@@ -61,17 +61,18 @@
 
     <div class="top-offset" id="top-offset"></div>
 
-    <h1 class="page-title" id="page-title">Preventing Security Vunerabalites</h1>
+    <h1 class="page-title" id="page-title">Preventing Security Vulnerabilities</h1>
 
     <div class="content">
         <div class="head-content">
             <div class="left">
-                <h2>What is the Importance of Preventing Security Vunerabalites?</h2>
+                <h2 class="head-content-title">What is the Importance of Preventing Security Vulnerabilities?</h2>
                 <p>
                     In today’s increasingly interconnected world, consumer applications play a pivotal role in daily
-                    life, handling everything from communication and banking to healthcare and entertainment. With this
-                    ubiquity comes the critical responsibility of ensuring the security of these applications to protect
-                    sensitive user data and maintain trust.
+                    life, handling everything from communication and banking to healthcare and entertainment. While
+                    these technologies bring convenience and efficiency, they also introduce real-world risks, such as
+                    data breaches and cyberattacks, which can have severe consequences for individuals and organizations
+                    alike.
                 </p>
             </div>
             <div class="right">
@@ -87,13 +88,13 @@
 
     <div class="content" id="content">
         <div id="scroll-bounds" class="scroll-bounds">
-            <h1 class="past-content-title">Vunerabalites Found In The Past</h1>
+            <h1 class="past-content-title">Vulnerabilities Found In The Past</h1>
             <div id="content-container" class="content-container">
                 <div id="text-content" class="text-content">
                     <div class="talking-point">
                         <div class="talking-point-left">
-                            <h2>Microsoft Office Memory Corruption Vulnerability</h2>
-                            <h3>
+                            <h2 class="talking-point-title">Microsoft Office Memory Corruption Vulnerability</h2>
+                            <h3 class="talking-point-info">
                                 Discovered: November 14th, 2017
                                 <br>
                                 Patched: November 28th, 2017
@@ -121,8 +122,8 @@
 
                     <div class="talking-point">
                         <div class="talking-point-left">
-                            <h2>SolarWinds Hack and FireEye Breach</h2>
-                            <h3>
+                            <h2 class="talking-point-title">SolarWinds Orion API Vunerabalites</h2>
+                            <h3 class="talking-point-info">
                                 Discovered: December 8th, 2020
                                 <br>
                                 Patched: December 13th, 2020
@@ -146,8 +147,9 @@
 
                     <div class="talking-point">
                         <div class="talking-point-left">
-                            <h2>Log4Shell/Log4J</h2>
-                            <h3>Discovered: November 24th, 2021<br> Patched: December 6th, 2021<br>CVE Entry: <a
+                            <h2 class="talking-point-title">Log4J/Log4Shell</h2>
+                            <h3 class="talking-point-info">Discovered: November 24th, 2021<br> Patched: December 6th,
+                                2021<br>CVE Entry: <a
                                     href="https://nvd.nist.gov/vuln/detail/cve-2021-44228">CVE-2021-44228</a></h3>
                             <p>
                                 Apache Log4j2 2.0-beta9 through 2.15.0 (excluding security releases 2.12.2, 2.12.3, and
@@ -184,7 +186,7 @@
         </div>
 
         <div class="overlay-text">
-            <div class="more-text">
+            <p class="more-text">
                 Security vulnerabilities are more common than many realize, with thousands of new flaws reported each
                 year. The increasing complexity of modern software, reliance on third-party libraries, and the growth of
                 cloud computing and IoT devices have all expanded the potential attack surface. While some
@@ -193,8 +195,7 @@
                 make vulnerabilities a persistent challenge. This highlights the importance of continuous security
                 efforts, regular updates, and proactive threat detection to reduce the risks posed by these
                 vulnerabilities.
-
-            </div>
+            </p>
         </div>
 
 
